more spacing issues

--- a/frontend/src/publicSpace/public.module.css
+++ b/frontend/src/publicSpace/public.module.css
@@ -148,7 +148,7 @@
 
 .backbutton{
     cursor:pointer;
-    margin-right: 15px;
+    margin-right: 20px;
 }
 
 @media(max-width:1440px){
